--- a/hyyzkjy.html
+++ b/hyyzkjy.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta charset="utf-8" />
     <title>致我的朋友</title>
-    <meta name="description" content="致何媛媛" />
+    <meta name="description" content="致我暗恋了三年的何媛媛" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
@@ -49,7 +49,7 @@
       <body>
         <center>
             <font color="grey"><span>中考倒计时</span><br>
-            今天是2023年2月19日，距离2023年中考还有</font> 
+            距离2023年中考还有</font> 
             <br>
 
 <script type="text/javascript">
@@ -109,13 +109,6 @@ var time_now_server,time_now_client,time_end,time_server_client,timerID;
             }
             </script>
             <div id="timer"></div>
-      <p>
-        “求知和创造都是人类高级的快乐”
-      </p>
-      <p>你说过的</p>
-      <p>
-        你想考西南政法大学，这是你现在的想法，你也不知道以后会不会改变
-      </p>
       <p>每个人每个阶段都要有一个目标，有了目标就决定了反向，不断激励着我们
       </p>
       <p>很多时候我们的目标和意义是会随着经历和感悟而改变的
@@ -142,8 +135,10 @@ var time_now_server,time_now_client,time_end,time_server_client,timerID;
         没什么熬不过去的，抬头看，那片星空为你而亮
       </p>
       <p>天再热，热不过心;有信心，一切皆有可能。祝中考顺利，前程似锦！</p>
+          <p>我喜欢你
+          </p>
       <p style="text-align: right">XnNanzi</p>
-      <p style="text-align: right">2023年2月18日</p>
+      <p style="text-align: right">2023年5月20日</p>
     </div>
   </body>
 </html>
