--- a/hyyzkjy.html
+++ b/hyyzkjy.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta charset="utf-8" />
-    <title>致我的朋友</title>
+    <title>致我暗恋了三年的好朋友</title>
     <meta name="description" content="致我暗恋了三年的何媛媛" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -135,7 +135,7 @@ var time_now_server,time_now_client,time_end,time_server_client,timerID;
         没什么熬不过去的，抬头看，那片星空为你而亮
       </p>
       <p>天再热，热不过心;有信心，一切皆有可能。祝中考顺利，前程似锦！</p>
-          <p>我喜欢你
+          <p><b>我喜欢你</b>
           </p>
       <p style="text-align: right">XnNanzi</p>
       <p style="text-align: right">2023年5月20日</p>
