--- a/hyyzkjy.html
+++ b/hyyzkjy.html
@@ -45,7 +45,7 @@
 
   <body>
     <div class="box">
-      <div>致我的朋友：</div>
+      <div>致我偷偷喜欢了三年的好朋友：</div>
       <body>
         <center>
             <font color="grey"><span>中考倒计时</span><br>
